--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,11 @@ a {
   text-decoration: none;
 }
 
-/* Navigation */
+/* Header */
+
+.header {
+  background-color: var(--white-background);
+}
 
 .logo {
   color: inherit;
@@ -55,8 +59,6 @@ a {
   color: var(--pressed-state);
 }
 
-/* Address */
-
 .link-address {
   color: var(--text);
   font-size: 16px;
@@ -65,5 +67,31 @@ a {
 }
 
 .link-address:active {
-    color: var(--pressed-state);
+  color: var(--pressed-state);
 }
+
+/* Hero section */
+
+.hero-section {
+  background-color: var(--dark);
+}
+
+.hero-heading {
+  color: #fff;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 60px;
+  letter-spacing: 1.12px;
+}
+
+.hero-button {
+  color: #fff;
+  background-color: var(--primary-brand);
+  border-width: 1px;
+  cursor: pointer;
+}
+
+.hero-button:hover {
+  background-color: var(--pressed-state);
+}
+
