--- a/css/styles.css
+++ b/css/styles.css
@@ -105,9 +105,36 @@ a {
 }
 
 .advantages-paragraph {
-    color: var(--text);
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.32px;
+  color: var(--text);
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.32px;
 }
 
+/* Our team section */
+
+.our-team-section {
+  background-color: var(--light);
+}
+
+.our-team-heading {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 111.111%;
+  letter-spacing: 0.72px;
+}
+.name {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 120%;
+  letter-spacing: 0.4px;
+}
+
+.team-position {
+  color: var(--text);
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.32px;
+}
+
+/* Our portfolio section */
