--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ a {
   background-color: var(--white-background);
 }
 
-.logo {
+.logo-header {
   color: inherit;
   font-family: Raleway;
   font-size: 18px;
@@ -138,3 +138,47 @@ a {
 }
 
 /* Our portfolio section */
+
+.portfolio-heading {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 111.111%;
+  letter-spacing: 0.72px;
+}
+
+.portfolio-item {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 120%;
+  letter-spacing: 0.4px;
+}
+
+.portfolio-text {
+  color: var(--text);
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.32px;
+}
+
+/* Footer */
+
+.footer {
+  background-color: var(--dark);
+}
+
+.logo-footer {
+  color: var(--light);
+  font-family: Raleway;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 116.667%;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+}
+
+.footer-text {
+  color: var(--light);
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.32px;
+}
