--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,8 @@
 body {
   font-family: 'Raleway', sans-serif;
   font-family: 'Roboto', sans-serif;
-  color: var(--dark);
+  color: var(--text);
+  background-color: #fff;
 }
 
 ul {
@@ -33,7 +34,7 @@ a {
 }
 
 .logo-header {
-  color: inherit;
+  color: var(--dark);
   font-family: Raleway;
   font-size: 18px;
   font-style: normal;
@@ -48,7 +49,7 @@ a {
 }
 
 .link-navigation {
-  color: inherit;
+  color: var(--dark);
   font-size: 16px;
   font-weight: 500;
   line-height: 150%;
@@ -60,7 +61,7 @@ a {
 }
 
 .link-address {
-  color: var(--text);
+  color: inherit;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.32px;
@@ -98,6 +99,7 @@ a {
 /* Our advantages section */
 
 .advantages-heading {
+  color: var(--dark);
   font-size: 20px;
   font-weight: 500;
   line-height: 150%;
@@ -105,7 +107,6 @@ a {
 }
 
 .advantages-paragraph {
-  color: var(--text);
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.32px;
@@ -118,12 +119,14 @@ a {
 }
 
 .our-team-heading {
+  color: var(--dark);
   font-size: 36px;
   font-weight: 700;
   line-height: 111.111%;
   letter-spacing: 0.72px;
 }
 .name {
+  color: var(--dark);
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
@@ -131,7 +134,6 @@ a {
 }
 
 .team-position {
-  color: var(--text);
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.32px;
@@ -140,6 +142,7 @@ a {
 /* Our portfolio section */
 
 .portfolio-heading {
+  color: var(--dark);
   font-size: 36px;
   font-weight: 700;
   line-height: 111.111%;
@@ -147,6 +150,7 @@ a {
 }
 
 .portfolio-item {
+  color: var(--dark);
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
@@ -154,7 +158,6 @@ a {
 }
 
 .portfolio-text {
-  color: var(--text);
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.32px;
