--- a/css/styles.css
+++ b/css/styles.css
@@ -33,19 +33,19 @@ a {
   background-color: var(--white-background);
 }
 
-.logo-header {
-  color: var(--dark);
-  font-family: Raleway;
+.logo {
+  color: var(--primary-brand);
+  font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
-  line-height: 116.667%;
+  line-height: 1.17;
   letter-spacing: 0.54px;
   text-transform: uppercase;
 }
 
-.logo-web {
-  color: var(--primary-brand);
+.logo-header-studio {
+  color: var(--dark);
 }
 
 .link-navigation {
@@ -56,18 +56,27 @@ a {
   letter-spacing: 0.32px;
 }
 
-.link-navigation:active {
+.link-navigation:hover {
   color: var(--pressed-state);
 }
 
-.link-address {
+.link-navigation:focus {
+  color: var(--pressed-state);
+}
+
+.header-link-address {
   color: inherit;
+  font-style: normal;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.32px;
 }
 
-.link-address:active {
+.header-link-address:hover {
+  color: var(--pressed-state);
+}
+
+.header-link-address:focus {
   color: var(--pressed-state);
 }
 
@@ -79,6 +88,7 @@ a {
 
 .hero-heading {
   color: #fff;
+  text-align: center;
   font-size: 56px;
   font-weight: 700;
   line-height: 107.143%;
@@ -88,11 +98,18 @@ a {
 .hero-button {
   color: #fff;
   background-color: var(--primary-brand);
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   border-width: 1px;
   cursor: pointer;
 }
 
 .hero-button:hover {
+  background-color: var(--pressed-state);
+}
+
+.hero-button:focus {
   background-color: var(--pressed-state);
 }
 
@@ -102,7 +119,7 @@ a {
   color: var(--dark);
   font-size: 20px;
   font-weight: 500;
-  line-height: 150%;
+  line-height: 1.2;
   letter-spacing: 0.4px;
 }
 
@@ -120,13 +137,16 @@ a {
 
 .our-team-heading {
   color: var(--dark);
+  text-align: center;
   font-size: 36px;
   font-weight: 700;
   line-height: 111.111%;
   letter-spacing: 0.72px;
+  text-transform: capitalize
 }
-.name {
+.our-team-name {
   color: var(--dark);
+  background-color: #fff;
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
@@ -143,6 +163,8 @@ a {
 
 .portfolio-heading {
   color: var(--dark);
+  text-align: center;
+  text-transform: capitalize;
   font-size: 36px;
   font-weight: 700;
   line-height: 111.111%;
@@ -169,9 +191,9 @@ a {
   background-color: var(--dark);
 }
 
-.logo-footer {
+.logo-footer-studio {
   color: var(--light);
-  font-family: Raleway;
+  font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 116.667%;
