--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ a {
 }
 
 .header-link-address {
-  color: inherit;
+  color: var(--text);
   font-style: normal;
   font-size: 16px;
   line-height: 150%;
@@ -144,9 +144,13 @@ a {
   letter-spacing: 0.72px;
   text-transform: capitalize
 }
+
+.our-team-list {
+  background-color: #fff;
+}
+
 .our-team-name {
   color: var(--dark);
-  background-color: #fff;
   font-size: 20px;
   font-weight: 500;
   line-height: 120%;
