--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ a {
 .address-link {
   color: var(--text);
   font-size: 16px;
+  font-weight: 400;
   line-height: 150%;
   letter-spacing: 0.32px;
 }
