--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
   font-family: 'Roboto', sans-serif;
   color: var(--text);
   background-color: #fff;
@@ -41,7 +40,7 @@ a {
   font-style: normal;
   font-weight: 700;
   line-height: 1.17;
-  letter-spacing: 0.54px;
+  letter-spacing: 0.03;
   text-transform: uppercase;
 }
 
@@ -54,7 +53,7 @@ a {
   font-size: 16px;
   font-weight: 500;
   line-height: 150%;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02;
 }
 
 .link-navigation:hover {
@@ -74,7 +73,7 @@ a {
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02;
 }
 
 .address-link:hover {
@@ -96,8 +95,8 @@ a {
   text-align: center;
   font-size: 56px;
   font-weight: 700;
-  line-height: 107.143%;
-  letter-spacing: 1.12px;
+  line-height: 1.07;
+  letter-spacing: 0.02;
 }
 
 .hero-button {
@@ -135,13 +134,13 @@ a {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
-  letter-spacing: 0.4px;
+  letter-spacing: 0.02;
 }
 
 .advantages-paragraph {
   font-size: 16px;
   line-height: 150%;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02;
 }
 
 /* Our team section */
@@ -155,8 +154,8 @@ a {
   text-align: center;
   font-size: 36px;
   font-weight: 700;
-  line-height: 111.111%;
-  letter-spacing: 0.72px;
+  line-height: 1.11;
+  letter-spacing: 0.02;
   text-transform: capitalize;
 }
 
@@ -168,14 +167,14 @@ a {
   color: var(--dark);
   font-size: 20px;
   font-weight: 500;
-  line-height: 120%;
-  letter-spacing: 0.4px;
+  line-height: 1.2;
+  letter-spacing: 0.02;
 }
 
 .team-position {
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.32px;
+  line-height: 1.5;
+  letter-spacing: 0.02;
 }
 
 /* Our portfolio section */
@@ -186,22 +185,22 @@ a {
   text-transform: capitalize;
   font-size: 36px;
   font-weight: 700;
-  line-height: 111.111%;
-  letter-spacing: 0.72px;
+  line-height: 1.11;
+  letter-spacing: 0.02;
 }
 
 .portfolio-item {
   color: var(--dark);
   font-size: 20px;
   font-weight: 500;
-  line-height: 120%;
-  letter-spacing: 0.4px;
+  line-height: 1.2;
+  letter-spacing: 0.02;
 }
 
 .portfolio-text {
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.32px;
+  line-height: 1.5;
+  letter-spacing: 0.02;
 }
 
 /* Footer */
@@ -215,14 +214,14 @@ a {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: 700;
-  line-height: 116.667%;
-  letter-spacing: 0.54px;
+  line-height: 1.17;
+  letter-spacing: 0.03;
   text-transform: uppercase;
 }
 
 .footer-text {
   color: var(--light);
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.32px;
+  line-height: 1.5;
+  letter-spacing: 0.02;
 }
