--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ a {
   color: var(--dark);
   font-size: 16px;
   font-weight: 500;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0.02;
 }
 
@@ -72,7 +72,7 @@ a {
   color: var(--text);
   font-size: 16px;
   font-weight: 400;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0.02;
 }
 
@@ -139,7 +139,7 @@ a {
 
 .advantages-paragraph {
   font-size: 16px;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0.02;
 }
 
