--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ a {
 }
 
 .address-link {
-  color: var(--text);
+  color: currentColor;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
